# Study_Group_Platform

./: .env  .gitignore  .stylelintignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  react-server.js  server.js
Deliverables/: Deliverable 1.md  Deliverable 3.md  Deliverable 4.md  Deliverable 5.md  Deliverable 6.md  Deliverable 7.md  Deliverable_3.md  Group 7 - Deliverable 2.md
Deliverables/res/: Group_UML.drawio  Student_UML.drawio  pictureSettings.drawio (1).xml
StudySphereServer/: Cargo.toml
StudySphereServer/src/: main.rs
StudySphereServer/src/api/: task.rs
StudySphereServer/src/model/: task.rs
backend/: server.js
backend/config/: db.js  generateToken.js
backend/controllers/: authController.js  goalController.js  groupController.js  groupController.test.js  meetingController.js  meetingController.test.js  messageController.js  messageController.test.js  studentController.js  studentController.test.js
backend/middleware/: errorMiddleware.js  protectRoute.js
backend/models/: GroupModel.js  MeetingModel.js  MessageModel.js  StudentModel.js
backend/routes/: authRoutes.js  groupRoutes.js  meetingRoutes.js  messageRoutes.js  studentRoute.js  studentRoutes.js  throwawayRoute.js
backend_server/: package.json  server.js
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: GroupModel.js.html  index.html
coverage/lcov-report/config/: index.html  (+1 more)
frontend/: package-lock.json  package.json
frontend/src/: App.js  App.jsx  index.css  index.jsx
res/notes/: actix.md
server/models/: UserModel.js
(+56 files in other folders)
