[package]
name = "StudySphereServer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
uuid = { version="1.10.0", features = ["v4"] }
serde = { version="1.0.210", features = ["derive"] }
derive_more = "^0.99"
env_logger = "0.11.5"
log = "0.4.22"
strum_macros = "0.26.4"
strum = { version="0.26.3", features = ["derive"] }
